# Nekopapa

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_EN.md  build_win.bat
.github/workflows/: ci.yml
app/control-desktop/: .env.example  package-lock.json  package.json
app/control-desktop/src/: App.tsx
app/control-desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/control-desktop/src-tauri/icons/: icon.icns
app/control-desktop/src-tauri/src/: auth_keychain.rs  lib.rs
app/control-desktop/src/auth/: authService.ts  backendAuthAdapter.ts  secureSession.ts  types.ts
app/control-desktop/src/components/: Live2DCompanion.tsx  TopNavigation.tsx
app/control-desktop/src/pages/: AuthDialog.tsx  SettingsPage.tsx
app/control-desktop/src/styles/: auth.css  base.css  home.css
app/live2d-stage/src/: stage_runtime.cpp
app/stage-desktop/: CMakeLists.txt
app/stage-desktop/qml/: AbilityPage.qml  AgentPage.qml  CharacterPage.qml  ChatPage.qml  DreamPage.qml  EvolutionPage.qml  HomePage.qml  IoTPage.qml  MemoryPage.qml  NNASidebar.qml  PerceptionPage.qml  SettingsPage.qml  SoulPage.qml  StatusPage.qml  ToolCallPage.qml  WorldPage.qml  main.qml
app/stage-desktop/qml/components/: NNAStatusCard.qml  PlaceholderPage.qml
app/stage-desktop/qml/core/: Icons.qml  NNAAppNavSegment.qml  NNAAppShell.qml  NNABaseButton.qml  NNABaseCard.qml  NNABaseInput.qml  NNACardPanel.qml  NNADesktopLayoutMetrics.qml  NNASettingGroup.qml  NNASettingRow.qml  NNAShellSideNav.qml  NNASlider.qml  NNASwitch.qml  ShapeIcon.qml  Theme.qml
app/stage-desktop/qml/core/apple/: ApplePrimaryButton.qml  AppleSettingDivider.qml  AppleSettingGroup.qml  AppleSettingRow.qml  AppleSettingsSection.qml  AppleSidebarNavRow.qml  AppleTextButton.qml  AppleToggleSwitch.qml
app/stage-desktop/qml/features/ability/: AbilityView.qml
app/stage-desktop/qml/features/ability/agent/: AgentState.qml  AgentStore.qml  AgentView.qml
app/stage-desktop/qml/features/ability/evolution/: EvolutionView.qml
app/stage-desktop/qml/features/ability/toolcall/: ToolCallView.qml
app/stage-desktop/qml/features/chat/: ChatState.qml  ChatStore.qml  ChatView.qml
app/stage-desktop/qml/features/home/: HomeState.qml  HomeStore.qml  HomeView.qml
app/stage-desktop/qml/features/home/components/: HomeAvatarArea.qml  HomeChatBubble.qml  HomeChatList.qml  HomeChatOverlay.qml  HomeFunctionRing.qml  HomeHudOrbs.qml  HomeHudPanel.qml  HomeInputBar.qml  HomeModalCard.qml  HomeModelAdjustDrawer.qml  HomeParticleBg.qml  HomeQuickActions.qml  HomeSidePanel.qml  HomeUserChip.qml
app/stage-desktop/qml/features/mine/: MineCommandPalette.qml  MineDeviceTopology.qml  MineFieldRow.qml  MineIconRail.qml  MineInspectorRow.qml  MineModeSwitcher.qml  MineOverviewPage.qml  MineStatusBar.qml  NNAMineView.qml
app/stage-desktop/qml/features/settings/: SettingsState.qml  SettingsStore.qml  SettingsView.qml
app/stage-desktop/qml/features/settings/components/: SettingsCategoryAI.qml  SettingsCategoryAbout.qml  SettingsCategoryEngine.qml  SettingsCategoryGeneral.qml  SettingsCategoryPet.qml  SettingsCategoryPrivacy.qml  SettingsGroup.qml  SettingsRow.qml  SettingsSidebar.qml
app/stage-desktop/qml/features/soul/: SoulState.qml  SoulStore.qml  SoulView.qml
app/stage-desktop/qml/features/soul/character/: CharacterState.qml  CharacterStore.qml  CharacterView.qml
app/stage-desktop/qml/features/soul/dream/: DreamState.qml  DreamStore.qml  DreamView.qml
app/stage-desktop/qml/features/soul/memory/: MemoryState.qml  MemoryStore.qml  MemoryView.qml
app/stage-desktop/qml/features/soul/status/: StatusState.qml  StatusStore.qml  StatusView.qml
app/stage-desktop/qml/features/world/: WorldView.qml
app/stage-desktop/qml/features/world/iot/: IoTView.qml
app/stage-desktop/qml/features/world/perception/: PerceptionView.qml
app/stage-desktop/qml/windows/: AgentWorkspaceWindow.qml  DesktopCompanionWindow.qml
app/stage-desktop/src/: agent_workspace_service.cpp  agent_workspace_service.h  app_controller.cpp  app_controller.h  icons.cpp  icons.h  live2d_stage_profile.cpp  live2d_stage_profile.h  main.cpp  nna_avatar_canvas.cpp  nna_avatar_canvas.h  nna_macos_dock.mm  nna_model_manager.cpp  nna_model_manager.h  nna_window_chrome.cpp  nna_window_chrome.h  nna_window_chrome.mm  theme.cpp  theme.h
cmake/: FindLive2D.cmake
doc/: ISSUES.md  OpenNeko Engine 完整项目结构.md  OpenNeko Engine 桌面客户端UI架构设计.md  🐾 Nekonano-Aether (NNA) 协作指南：Issues 与 Pull Request.md  🐾 Nekonano-Aether (NNA) 团队全流程 Git 实战手册.md
doc/architecture/: desktop-runtime-boundaries.md
doc/product/: README.md  desktop-ui-architecture.md  prototype-baseline.md
engine/: CMakeLists.txt
engine/include/nna/: export.h
engine/include/nna/core/: engine.h  types.h
engine/include/nna/graphics/live2d/: live2d_model.h  live2d_renderer.h  live2d_stage_driver.h
engine/src/: engine_stub.cpp
engine/src/graphics/live2d/: live2d_model.cpp  live2d_renderer.cpp  live2d_stage_driver.cpp
scripts/: package-desktop.sh
