[package]
name = "nekopapa"
version = "0.2.0"
description = "NekoPapa desktop control console"
authors = ["Nekonano-Aether"]
edition = "2024"
rust-version = "1.96"

[lib]
name = "nekopapa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = ["macos-private-api"] }
tauri-plugin-shell = "2.3.5"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
